2007-11-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Cleanup everything in plugins.

	* exchange-account-listener.c: (account_changed):
	* exchange-mapi-account-setup.c: (exchange_mapi_delete_profile),
	(validate_credentials):

2007-11-27  Srinivasa Ragavan  <sragavan@novell.com>

	** Add support for delete/disable accounts. Modify partly should work
	unless you modify user/domain/host.

	* exchange-account-listener.c: (add_addressbook_sources),
	(account_added), (account_removed), (account_changed):
	* exchange-mapi-account-setup.c: (exchange_mapi_delete_profile),
	(exchange_mapi_create_profile), (validate_credentials),
	(org_gnome_exchange_mapi_account_setup):

2007-11-27  Srinivasa Ragavan  <sragavan@novell.com>

	* exchange-mapi-account-setup.c: (create_profile),
	(org_gnome_exchange_mapi_account_setup): Fix the domain name field

2007-11-27  Srinivasa Ragavan  <sragavan@novell.com>

	* exchange-mapi-account-setup.c: (create_profile): Fix 2 logins for
	account creation.

2007-11-26  Suman Manjunath  <msuman@novell.com>

	** committing ChangeLog entry for r34580

	* exchange-account-listener.c: (add_cal_esource):
	* exchange-mapi-account-setup.c: (exchange_mapi_book_check), 
	(exchange_mapi_book_commit), (exchange_mapi_cal_check), 
	(exchange_mapi_cal_commit), (add_folders), (exchange_mapi_create):
	* org-gnome-exchange-mapi.eplug.xml:
	Support for adding new calendar/task list/memo list.

2007-11-23  Srinivasa Ragavan  <sragavan@novell.com>

	** Added support for Create Calendar/Addressbook.

	* exchange-account-listener.c: (add_cal_esource),
	(add_addressbook_sources),
	(exchange_account_listener_peek_folder_list):
	* exchange-mapi-account-setup.c: (check_node), (add_to_store),
	(add_folders), (exchange_mapi_cursor_change),
	(exchange_mapi_create), (exchange_mapi_check),
	(exchange_mapi_commit):
	* org-gnome-exchange-mapi.eplug.xml:

2007-11-20  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c: